switch to E6E